# pairs_trading

./: .gitignore  README.md  backtest.py  brain.py  portfolioManager.py  pyproject.toml  run_pipeline.py
data/event_cache/: 00957517bef5c193.json  00957517bef5c193.parquet
docs/: architecture.md  backend_frontend_tutorial.md  backtest_agent_workbench.md  backtest_workflows.md  fullstack_workflows.md  paper_trading_workflows.md  strategy_catalog.md
examples/: events.sample.csv  paper_deployment.sample.json  sector_map.sample.json
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  styles.css
pairs_trading/: __init__.py  __main__.py  backtesting.py  broker.py  cli.py  execution.py  market_data.py  news_data.py  portfolio.py  reconciliation.py  research.py  sentiment.py  stat_arb.py  strategies.py  validation.py  visualization.py
pairs_trading/api/: __init__.py  paper.py  strategy_catalog.py
pairs_trading/apps/: __init__.py  cli.py
tests/: __init__.py  common.py  test_architecture_layout.py  test_backend_app.py  test_backend_backtests.py  test_backend_services.py  test_broker_stack.py  test_directional_strategies.py  test_etf_momentum.py  test_event_pipeline.py  test_market_data.py  test_news_data.py  test_paper_trading.py  test_paper_visualization.py  test_portfolio_manager.py  test_remote_news_adapters.py  test_run_pipeline.py  test_sentiment.py  test_strategy_catalog.py  test_validation.py  test_visualization.py  test_walk_forward.py
tools/: helpers.py
(+59 files in other folders)
